# scan-trash

./: .gitignore  README.md  pyproject.toml
configs/: cn.yaml  conservative.yaml  default.yaml  us.yaml
docs/: CHANGELOG.md  TODO.md  project_status.md  分析个股框架
docs/decisions/: README.md
docs/playbooks/: configuration_guide.md  screening_workflow.md  sector_screening_framework.md
docs/postmortems/: README.md
docs/principles/: investment_principles.md  screening_change_log.md  screening_charter.md  screening_update_template.md
investment-research/: TODO.md
investment-research-skill/: SKILL.md
investment-research-skill/agents/: openai.yaml
investment-research-skill/references/: checklist.md  financial-analysis.md  report-workflow.md  review-loop.md  valuation.md
investment-research/framework/: 01-投资原则.md  02-个股分析流程.md  03-财务三表分析.md  04-生意质量与护城河.md  05-估值与安全边际.md  06-风险与卖出标准.md  99-待完善框架.md  README.md
investment-research/logs/: decision-journal.md  framework-changelog.md
investment-research/reports/03613-同仁堂国药/: 2026-05-05-event-按新框架重评.md  2026-05-05-init-深度分析.md  thesis-log.md
investment-research/templates/: 个股深度分析报告模板.md  投资决策备忘录模板.md  财报拆解模板.md  跟踪复盘模板.md
rules/blacklists/: default.yaml
rules/notes/: README.md
rules/screening/: baseline.yaml  hk_spot_baseline.yaml
src/hk_value_screener/: __init__.py  app_config.py  blacklist.py  cli.py  config.py  data_sources.py  models.py  rules.py  sample_data.py
tests/: test_app_config.py  test_blacklist.py  test_cli.py  test_data_sources.py  test_hk_spot_rules.py  test_rules.py
